# ZygoteLoader

./: .gitattributes  .gitignore  LICENSE  README.md  build.gradle.kts  gradlew.bat  settings.gradle.kts
gradle-plugin/: build.gradle.kts
gradle-plugin/src/main/java/com/github/kr328/gradle/zygote/: ZygoteLoader.java  ZygoteLoaderDecorator.java  ZygoteLoaderDecorator.kt  ZygoteLoaderExtension.java  ZygoteLoaderExtension.kt  ZygoteLoaderPlugin.java  ZygoteLoaderPlugin.kt
gradle-plugin/src/main/java/com/github/kr328/gradle/zygote/compat/: Artifacts.kt
gradle-plugin/src/main/java/com/github/kr328/gradle/zygote/tasks/: ChecksumTask.java  ChecksumTask.kt  CustomizeTask.java  CustomizeTask.kt  FlattenTask.kt  PackagesTask.java  PackagesTask.kt  PropertiesTask.java  PropertiesTask.kt
gradle-plugin/src/main/java/com/github/kr328/gradle/zygote/util/: Capitalized.kt  Digest.kt  GradkeKtx.kt  Provider.kt  StringUtils.java
gradle-plugin/src/main/java/com/github/kr328/zloader/gradle/: ZygoteLoader.java  ZygoteLoaderDecorator.kt  ZygoteLoaderExtension.kt  ZygoteLoaderPlugin.kt
gradle-plugin/src/main/java/com/github/kr328/zloader/gradle/compat/: Artifacts.kt
gradle-plugin/src/main/java/com/github/kr328/zloader/gradle/decorator/: Riru.kt
gradle-plugin/src/main/java/com/github/kr328/zloader/gradle/tasks/: ChecksumTask.kt  CustomizeTask.kt  FlattenAssetsTask.kt  FlattenTask.kt  FlattenZipTask.kt  GeneratePackagesTask.kt  GeneratePropertiesTask.kt  PackageMagiskTask.kt  PackagesTask.kt  PropertiesTask.kt
gradle-plugin/src/main/java/com/github/kr328/zloader/gradle/util/: Artifacts.kt  Capitalized.kt  Digest.kt  File.kt  GradkeKtx.kt  Provider.kt
runtime/: build.gradle.kts  consumer-rules.pro
runtime/src/main/: AndroidManifest.xml
runtime/src/main/assets/customize.d/: 10-enforce-api-version.sh  11-enforce-arch.sh  40-initialize-data-directory.sh  40-process-data-directory.sh  90-restore-module-permission.sh  99-restore-permissions.sh
runtime/src/main/assets/riru/: customize.sh
runtime/src/main/cpp/: CMakeLists.txt  binder.c  binder.h  chunk.cpp  chunk.h  debug.h  delegate.h  delegate_riru.cpp  delegate_riru.h  delegate_zygisk.cpp  delegate_zygisk.h  dex.c  dex.cpp  dex.h  entrypoint.cpp  entrypoint.h  jni_utils.cpp  jni_utils.h  linker.c  linker.h  linker_utils.cpp  linker_utils.h  logger.cpp  logger.h  main.c  main.h  main_riru.cpp  main_riru.h  main_zygisk.cpp  main_zygisk.h  mem.cpp  mem.h  process.c  process.h  process_utils.cpp  process_utils.h  properties.c  properties.cpp  properties.h  properties_utils.cpp  (+9 more)
runtime/src/main/cpp/common/: CMakeLists.txt  dex.cpp  dex.h  io.cpp  io.h  log.cpp  log.h  packages.cpp  packages.h  path.cpp  path.h  prop.cpp  prop.h  util.cpp  util.h
runtime/src/main/cpp/ext/: plt.c  plt.h  zygisk.hpp
runtime/src/main/cpp/riru/: CMakeLists.txt  main.cpp
runtime/src/main/java/com/github/kr328/zloader/: BinderInterceptors.java  Constants.java  ZygoteLoader.java
runtime/src/main/java/com/github/kr328/zloader/internal/: Loader.java
runtime/src/riru/assets/: customize.sh
runtime/src/riru/assets/customize.d/: 20-enforce-magisk-version.sh  21-enforce-riru-env.sh  30-place-libraries.sh
runtime/src/zygisk/assets/: 30-place-libraries.sh  customize.sh
runtime/src/zygisk/assets/customize.d/: 20-enforce-magisk-version.sh
